--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "eslint": "^9.37.0",
     "prettier": "^3.6.2",
     "turbo": "^2.5.8",
-    "typescript": "^5.9.3"
+    "typescript": "^5.9.3",
+    "wrangler": "^4.42.2"
   }
 }
