--- a/package.json
+++ b/package.json
@@ -4,7 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev:web": "pnpm --filter web dev",
+    "build": "turbo run build",
+    "build:web": "pnpm --filter web build",
+    "deploy:web": "pnpm --filter web run deploy",
+    "deploy:workers": "turbo run deploy --filter \"workers/*\"",
+    "migrate:d1": "wrangler d1 migrations apply metadata_db",
+    "cf:login": "wrangler login"
   },
   "workspaces": [
     "packages/*",
