--- a/workers/text_to_embedding/wrangler.jsonc
+++ b/workers/text_to_embedding/wrangler.jsonc
@@ -12,5 +12,12 @@
 			"index_name": "smara-index",
 			"remote": true
 		}
-	]
+	],
+	"queues": {
+		"consumers" : [{
+			"queue": "smara-embedding-queue",
+			"max_batch_size": 1,
+			"max_batch_timeout": 0
+		}]
+	}
 }
