feat: implemented basic browser extension

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,34 @@ node_modules
 .env.local
 .wrangler
 apps/api/wrangler.jsonc
+
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+# misc
+.DS_Store
+*.pem
+
+# debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.pnpm-debug.log*
+
+# local env files
+.env*.local
+
+out/
+build/
+dist/
+
+# plasmo
+.plasmo
+
+# typescript
+.tsbuildinfo
