--- a/apps/browser-extension/package.json
+++ b/apps/browser-extension/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "plasmo": "0.90.5",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "@plasmohq/messaging": "^0.6.2",
+    "@plasmohq/storage": "^1.9.0"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "4.1.1",
@@ -24,7 +26,9 @@
   },
   "manifest": {
     "host_permissions": [
-      "https://*/*"
+      "https://*/*",
+      "http://localhost:*",
+      "http://127.0.0.1:*"
     ]
   }
 }
