--- a/apps/browser-extension/package.json
+++ b/apps/browser-extension/package.json
@@ -13,7 +13,9 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "@plasmohq/messaging": "^0.6.2",
-    "@plasmohq/storage": "^1.9.0"
+    "@plasmohq/storage": "^1.9.0",
+    "@smara/api-client": "workspace:*",
+    "@smara/ui": "workspace:*"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "4.1.1",
