--- a/workers/queue_consumer/wrangler.jsonc
+++ b/workers/queue_consumer/wrangler.jsonc
@@ -2,19 +2,11 @@
   "name": "smara-queue-consumer",
   "main": "index.ts",
   "compatibility_date": "2025-10-01",
-  "ai": {
-    "binding": "AI"
-  },
   "r2_buckets": [
     {
       "binding": "R2",
-      "bucket_name": "smara"
-    }
-  ],
-  "vectorize": [
-    {
-      "binding": "VECTOR",
-      "index_name": "smara-index"
+      "bucket_name": "smara",
+      "remote": true
     }
   ],
   "queues": {
@@ -25,21 +17,19 @@
         "max_batch_timeout": 0
       }
     ],
-    "producers": [{
-      "binding": "EMBEDDING_QUEUE",
-      "queue": "smara-embedding-queue"
-    }]
-  },
-  "services": [
-    {
-      "binding": "IMAGE_TO_TEXT_SERVICE",
-      "service": "smara-image-to-text",
-      "remote": true
-    },
-    {
-      "binding": "AUDIO_TO_TEXT_SERVICE", 
-      "service": "smara-audio-to-text",
-      "remote": true
-    }
-  ]
+    "producers": [
+      {
+        "binding": "IMAGE_INGEST_QUEUE",
+        "queue": "smara-image-ingest"
+      },
+      {
+        "binding": "AUDIO_INGEST_QUEUE",
+        "queue": "smara-audio-ingest"
+      },
+      {
+        "binding": "EMBEDDING_QUEUE",
+        "queue": "smara-embedding-queue"
+      }
+    ]
+  }
 }
