--- a/workers/video_to_text/package.json
+++ b/workers/video_to_text/package.json
@@ -12,10 +12,13 @@
   "license": "ISC",
   "packageManager": "pnpm@10.17.1",
   "dependencies": {
+    "@cloudflare/containers": "^0.0.28",
+    "@hono/node-server": "^1.14.1",
     "hono": "^4.9.11",
-    "@hono/node-server": "^1.14.1"
+    "tsx": "^4.7.0"
   },
   "devDependencies": {
+    "@cloudflare/workers-types": "^4.20251011.0",
     "@types/node": "^22.10.5"
   }
 }
