feat(logging): add observability to all the workers

--- a/workers/queue_consumer/wrangler.jsonc
+++ b/workers/queue_consumer/wrangler.jsonc
@@ -35,5 +35,12 @@
         "queue": "smara-embedding-queue"
       }
     ]
+  },
+  "observability": {
+    "logs": {
+        "enabled": true,
+        "head_sampling_rate": 1,
+        "invocation_logs": true
+    }
   }
 }
