--- a/workers/image_to_text/wrangler.jsonc
+++ b/workers/image_to_text/wrangler.jsonc
@@ -23,5 +23,12 @@
             "binding": "EMBEDDING_QUEUE",
             "queue": "smara-embedding-queue"
         }]
+    },
+    "observability": {
+        "logs": {
+            "enabled": true,
+            "head_sampling_rate": 1,
+            "invocation_logs": true
+        }
     }
 }
