--- a/workers/search/wrangler.jsonc
+++ b/workers/search/wrangler.jsonc
@@ -12,5 +12,12 @@
 	"ai": {
 		"binding": "AI",
 		"remote": true
-	}
+	},
+	"observability": {
+        "logs": {
+            "enabled": true,
+            "head_sampling_rate": 1,
+            "invocation_logs": true
+        }
+    }
 }
