--- a/workers/text_to_embedding/wrangler.jsonc
+++ b/workers/text_to_embedding/wrangler.jsonc
@@ -19,5 +19,12 @@
 			"max_batch_size": 1,
 			"max_batch_timeout": 0
 		}]
-	}
+	},
+	"observability": {
+        "logs": {
+            "enabled": true,
+            "head_sampling_rate": 1,
+            "invocation_logs": true
+        }
+    }
 }
