--- a/workers/queue_consumer/wrangler.jsonc
+++ b/workers/queue_consumer/wrangler.jsonc
@@ -31,6 +31,10 @@
         "queue": "smara-video-ingest"
       },
       {
+        "binding": "LINK_INGEST_QUEUE",
+        "queue": "smara-link-ingest"
+      },
+      {
         "binding": "EMBEDDING_QUEUE",
         "queue": "smara-embedding-queue"
       }
