--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "hono": "^4.9.11",
     "nanoid": "^5.1.6",
+    "jose": "^5.9.6",
     "@smara/database": "workspace:*",
     "@smara/schema": "workspace:*"
   },
