--- a/apps/browser-extension/package.json
+++ b/apps/browser-extension/package.json
@@ -9,13 +9,13 @@
     "package": "plasmo package"
   },
   "dependencies": {
-    "plasmo": "0.90.5",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
     "@plasmohq/messaging": "^0.6.2",
     "@plasmohq/storage": "^1.9.0",
     "@smara/api-client": "workspace:*",
-    "@smara/ui": "workspace:*"
+    "@smara/ui": "workspace:*",
+    "plasmo": "0.90.5",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "4.1.1",
@@ -23,7 +23,10 @@
     "@types/node": "20.11.5",
     "@types/react": "18.2.48",
     "@types/react-dom": "18.2.18",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
     "prettier": "3.2.4",
+    "tailwindcss": "^3.4.17",
     "typescript": "5.3.3"
   },
   "manifest": {
