--- a/workers/link_to_text/package.json
+++ b/workers/link_to_text/package.json
@@ -18,6 +18,6 @@
   },
   "dependencies": {
     "@smara/shared": "workspace:*",
-    "youtube-transcript-plus": "^1.0.2"
+    "@cloudflare/containers": "^0.0.28"
   }
 }
